<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">
    <RelativeLayout
        android:id="@+id/rlAcitionBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/black">
        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back"
            android:padding="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/back"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </RelativeLayout>
    <com.nomad_gps.views.SettingView
        android:id="@+id/svSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:setting_title="@string/send_interval"
        custom:setting_desc="@string/send_interval_desc"/>
    <com.nomad_gps.views.SettingView
        android:id="@+id/svGet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:setting_title="@string/get_interval"
        custom:setting_desc="@string/get_interval_desc"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:gravity="center_horizontal">
        <TextView
            android:id='@+id/title'
            style="@style/TextViewSettingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_password"
            />
        <TextView
            android:id='@+id/desc'
            style="@style/TextViewSettingDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:text="@string/use_password_desc"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_alignParentBottom="true"/>
        <CheckBox
            android:id="@+id/cbPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <com.nomad_gps.views.SettingView
        android:id="@+id/svPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:setting_title="@string/password"
        custom:setting_desc="@string/password_desc"/>
    <com.nomad_gps.views.SettingView
        android:id="@+id/svServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:setting_title="@string/server"
        custom:setting_desc="@string/server_desc"/>
</LinearLayout>