<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rlAcitionBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/black">
        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_app"
            android:padding="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/ivIcon"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <ImageView
            android:id="@+id/ivSettings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_settings"
            android:layout_alignParentRight="true"
            android:padding="5dp"/>
    </RelativeLayout>
    <ScrollView
        android:layout_below="@+id/rlAcitionBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">
            <View
                android:id="@+id/center"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true"/>
            <LinearLayout
                android:id="@+id/llContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/center"
                android:padding="5dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imei"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/status"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/lat"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altitude"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bearing"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/coordinates_in_buffer"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/battery"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_gravity="right"
                    android:text="@string/sos"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/center"
                android:padding="5dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvIMEI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvLat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/tvLong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvAltitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvBearing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvBuffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="\n0"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/tvBattery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ToggleButton
                    android:id="@+id/swSOS"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"/>
            </LinearLayout>
            <Button
                android:id="@+id/btnService"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:layout_below="@+id/llContent"/>
            <ProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="120dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="invisible"
                android:layout_below="@+id/btnService"
                android:layout_marginTop="-13dp"
                />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>